@@ -21,6 +21,8 @@ t/coverage.t
 t/critic.t
 t/cv.t
 t/dist.t
+t/duplicate.xml
+t/empty.xml
 t/eof.t
 t/eol.t
 t/gv.t
@@ -35,7 +37,10 @@ t/pod-synopsis.t
 t/pod.t
 t/port.t
 t/prereq.t
+t/second.xml
+t/simple.xml
 t/snippets.t
 t/strict.t
 t/unused.t
 t/vars.t
+t/xml.t
