@@ -5,6 +5,7 @@ Revision history for DBD-XMLSimple
 	Use Test::Needs
 	Use gtar to create a distribution on Macs
 	Fixed row indexing issue and strengthened column inference
+	Added support for more than one table at the same time
 
 0.07	Fri Feb  2 09:05:41 EST 2024
 	Fix uninit variable in DBI.pm
